--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a{
 .hero{
     width: 100%;
     height: 100vh;
-    background: url(https://wallpapercave.com/wp/wp3185345.jpg);
+    background: url(https://images.pexels.com/photos/196660/pexels-photo-196660.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
     background-size: cover;
 }
 nav{
