--- a/style.css
+++ b/style.css
@@ -1,95 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-*{
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-a{
-    text-decoration: none;
-}
-.hero{
-    width: 100%;
-    height: 100vh;
-    background: url(https://images.pexels.com/photos/196660/pexels-photo-196660.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-    background-size: cover;
-}
-nav{
+  }
+  
+  header {
+    background-color: #333;
+    color: #fb0707;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .header-content {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 30px 100px;
-}
-.logo{
-    max-height: 10px;
-    max-width: 10px;
-    
-}
-nav ul li{
-    list-style: none;
+  }
+  
+  img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  
+  .social-profiles {
+    margin-top: 20px;
+  }
+  
+  .social-profiles a {
     display: inline-block;
-    padding: 10px 20px;
-}
-nav ul li a{
-    color: #0fd1dc;
-    position: relative;
-    padding: 5px 0;
-}
-nav ul li a:hover{
-    color: #fd4766;
-}
-nav ul li a:after{
-    content: "";
+    margin: 0 10px;
+  }
+  
+  .projects {
+    padding: 20px;
+  }
+  
+  .project {
+    margin-bottom: 20px;
+  }
+  
+  .projects h2 {
+    text-align: center;
+  }
+  
+  /* CSS Animation */
+  body {
+    overflow: hidden;
+  }
+  
+  .animation {
     position: absolute;
-    left: 0;
-    width: 0;
-    height: 3px;
-    background: #4ced11;
-    transition: .3s;
-    bottom: 0;
-}
-nav ul li a:hover:after{
     width: 100%;
-}
-.btn{
-    color: #020c02;
-    font-size: 16px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    padding: 16px 40px;
-    border-radius: 500px;
-    display: inline-block;
-    font-weight: 500;
-    transition: all .4s ease-in-out;
-    background-size: 152% 100%;
-    background: #fd4766;
-    border: 2px solid #fd4766;
-}
-.btn:hover{
-    background: transparent;
-    border-color: #fd4766;
-    color: #fd4766;
-}
-.content{
-    position: absolute;
-    top: 35%;
-    left: 8%;
-}
-.content h1{
-    color: #ededf4;
-    font-size: 75px;
-    font-weight: 900;
-    line-height: 90px;
-    text-transform: inherit;
-    width: 70%;
-}
-.content h1 span{
-    color: #3bd61b;
-}
-.content p{
-    width: 55%;
-    color: #010a04;
-    margin-top: 25px;
-    margin-bottom: 30px;
-}
+    height: 100%;
+    background-image: linear-gradient(to bottom, #003366, #66ccff);
+    z-index: -1;
+    animation: gradientAnimation 10s linear infinite;
+  }
+  
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
